add thread support

--- a/swig/Makefile
+++ b/swig/Makefile
@@ -6,10 +6,10 @@ SRCDIR="../src"
 all : sm3 sm4
 
 sm3 : sm3.i
-	swig -c++ -python -outdir $(PYDIR) -o $(SRCDIR)/sm3_wrap.cpp sm3.i
+	swig -c++ -threads -python -outdir $(PYDIR) -o $(SRCDIR)/sm3_wrap.cpp sm3.i
 
 sm4 : sm4.i
-	swig -c++ -python -outdir $(PYDIR) -o $(SRCDIR)/sm4_wrap.cpp sm4.i
+	swig -c++ -threads -python -outdir $(PYDIR) -o $(SRCDIR)/sm4_wrap.cpp sm4.i
 
 
 clean:
